--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -1,24 +1,21 @@
 <div class="text-big">
   <div class="color-peche-foncee text-center mt-5">
-    <div>Ici, vous pouvez <b>réserver un créneau en ligne.</b></div>
-    <div>-La première séance <u>d’une heure</u> est <b>gratuite</b>!-</div>
-     <div class="color-turquoise-foncee text-left mt-3">
-      <div>Pour les heures suivantes, nos tarifs :</div>
-      <div>- Une place en séance d’une heure <b>classique</b> : 30 euros.</div>
-      <div>- Séance <b>individuelle</b> d'une heure : 45 euros.</div>
-      <div>- Une place en demi journée <b>classique</b> : 75 euros (4h à 25 euros dont 1h offerte).</div>
-      <div>- Demi journée <b>individuelle</b> : 120 euros (4h à 40 euros dont 1h offerte).</div>
-     </div>
-     <div class="color-peche-foncee text-center mt-5">
-      <div>Remarque : si vous souhaitez réserver pour un adulte, merci de nous <span class="typo-link"
-        routerLink="/contact">contacter</span> au préalable pour en discuter.</div>
-      </div>
-      <div class="color-turquoise-foncee text-center mt-5">
-        <div><i>(Certains navigateurs ne veulent pas actualiser la page Réservation quand vous leur demandez. 
-          Pas de panique, l'emploi du temps est actualisé automatiquement ! 
-          Vous pouvez aussi aller sur un autre onglet de notre site puis revenir sur "Réservation", 
-          ou bien utiliser les flèches "semaine précédente" puis "semaine suivante")</i></div>
-        </div>
+    <div>Ici, vous pouvez réserver un créneau de <b>médiation animale et sensorielle ou de cours particuliers</b>.</div>
+    <div class="color-turquoise-foncee text-left mt-3">
+      <div>Nos tarifs :</div>
+      <div>- (Médiation animale) Une place en séance d’une heure <b>classique</b> : 20 euros.</div>
+      <div>- (Médiation animale) Séance <b>individuelle</b> d'une heure : 30 euros.</div>
+      <div>- (Médiation animale) Une place en demi journée <b>classique</b> : 60 euros.</div>
+      <div>- (Médiation animale) Demi journée <b>individuelle</b> : 90 euros.</div>
+      <div>- (Cours particuliers) Cours <b>individuel</b> d'une heure (Lecture, Sciences primaire, Math primaire et collège, Physique-Chimie collège, SVT collège et Lycée) : 25 euros.</div>
+    </div>
+    <div class="color-peche-foncee text-center mt-5">
+    </div>
+    <div class="color-turquoise-foncee text-center mt-5">
+      <div><i>(Certains navigateurs ne veulent pas actualiser la page Réservation quand vous leur demandez.
+        Pas de panique, l'emploi du temps est actualisé automatiquement !
+        Vous pouvez aussi actualiser un autre onglet de notre site puis revenir sur "Réservation")</i></div>
+    </div>
   </div>
 </div>
 
