modifs accueil et reservation (à finir)

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -75,9 +75,6 @@
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div class="mt-3 color-peche-foncee">
-            La médiation animale et sensorielle
-          </div>
           <div>bla</div>
           <div>bla</div>
           <div>bla</div>
@@ -86,15 +83,12 @@
         </div>
       </div>
     </div>
-    <div class="jumbo">
+    <div class="jumbo mt-3 mb-3">
       <div class="jumbo-title">
-        Les <b>cours particuliers</b>
+        La <b>pension pour chats</b>
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div class="mt-3 color-peche-foncee">
-            La médiation animale et sensorielle
-          </div>
           <div>bla</div>
           <div>bla</div>
           <div>bla</div>
