--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -7,7 +7,7 @@
       <div>- (Médiation animale) Séance <b>individuelle</b> d'une heure : 30 euros.</div>
       <div>- (Médiation animale) Une place en demi journée <b>classique</b> : 60 euros.</div>
       <div>- (Médiation animale) Demi journée <b>individuelle</b> : 90 euros.</div>
-      <div>- (Cours particuliers) Cours <b>individuel</b> d'une heure (Lecture, Sciences primaire, Math primaire et collège, Physique-Chimie collège, SVT collège et Lycée) : 25 euros.</div>
+      <div>- (Cours particuliers) Cours <b>individuel</b> d'une heure en Lecture/Sciences primaire/Math primaire et collège/Physique-Chimie collège/SVT collège et Lycée : 25 euros.</div>
     </div>
     <div class="color-peche-foncee text-center mt-5">
     </div>
