modifs accueil et reservation 2 (à finir)

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -60,7 +60,7 @@
             </li>
           </ul>
           <div class="color-peche-foncee text-center mt-3">
-            Vous voulez réserver pour une personne non représentée ci-dessus (un adulte par exemple) ? <span
+            LIEN RESERVATION + Vous voulez réserver pour une personne non représentée ci-dessus (un adulte par exemple) ? <span
             class="typo-link"
             routerLink="/contact">Contactez-nous</span> afin de déterminer si c'est possible !
           </div>
@@ -75,8 +75,8 @@
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div>bla</div>
-          <div>bla</div>
+          <div>explications</div>
+          <div>lien réservation</div>
           <div>bla</div>
           <div>bla</div>
           <div>bla</div>
@@ -89,8 +89,22 @@
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
+          <div>intro</div>
+          <div>lien page pension</div>
           <div>bla</div>
           <div>bla</div>
+          <div>bla</div>
+        </div>
+      </div>
+    </div>
+    <div class="jumbo mb-3">
+      <div class="jumbo-title">
+        Le <b>club TSA</b>
+      </div>
+      <div class="jumbo-body">
+        <div class="color-turquoise-foncee text-center">
+          <div>explication</div>
+          <div>lien page réservation ?</div>
           <div>bla</div>
           <div>bla</div>
           <div>bla</div>
