ajout act accueil/reservation/rubriques, dim open

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -14,8 +14,9 @@
   (close)="closeEventHandler()">
 </ng-image-fullscreen-view>
 
-<div class="pb-4 color-peche-foncee text-big text-center"> Le concept de <b>Séréni'chat</b> : de la <b>médiation animale
-  et sensorielle</b>, des <b>cours particuliers</b> et une solution pour faire <b>garder ses animaux domestiques</b>,
+<div class="pb-4 color-peche-foncee text-big text-center"> Le concept de <b>Séréni'chat</b> : 
+  de la <b>médiation animale et sensorielle</b>, des <b>cours particuliers</b>, une solution pour faire 
+  <b>garder ses animaux domestiques</b> et un <b>club Jeunes Adultes Neuro-Atypiques</b>,
   tout ça à Paris !
 </div>
 
@@ -56,13 +57,15 @@
             <li>Enfants porteurs de <b>trisomie</b></li>
             <li>Enfants <b>malades chroniques</b></li>
             <li><b>Particuliers</b> ou <b>organisations</b> : classes ULIS, HDJP, MDPH...</li>
-            <li><b>Parents</b> ou <b>aidants</b> à la recherche d'une activité leur apportant un <b>moment de répit</b>
+            <li><b>Parents</b> ou <b>aidants</b> à la recherche d'une activité leur apportant un 
+              <b>moment de répit</b>
             </li>
           </ul>
           <div class="color-peche-foncee text-center mt-3">
-            LIEN RESERVATION + Vous voulez réserver pour une personne non représentée ci-dessus (un adulte par exemple) ? <span
+            <div>Pour réserver un créneau, rendez-vous dans la rubrique <span class="typo-link" routerLink="/reservation">Réservation</span> !</div>
+            <div>Vous voulez réserver pour une personne non représentée ci-dessus (un adulte par exemple) ? <span
             class="typo-link"
-            routerLink="/contact">Contactez-nous</span> afin de déterminer si c'est possible !
+            routerLink="/contact">Contactez-nous</span> afin de déterminer si c'est possible !</div>
           </div>
         </div>
       </div>
@@ -75,11 +78,24 @@
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div>explications</div>
-          <div>lien réservation</div>
-          <div>bla</div>
-          <div>bla</div>
-          <div>bla</div>
+          <div>Noémie, la créatrice de Séréni'chat, est enseignante de formation 
+            avec plus de 5 ans d'expérience en collège et lycée. En cas de difficultés dans 
+            certaines matières, de phobie scolaire, de difficultés de scolarisation, 
+            ou si vous désirez en savoir plus sur les animaux de compagnie, Séréni'chat est là pour vous !</div> 
+            <div>Nous proposons des cours de :</div>
+            <ul class="text-left">
+              <li><b>Lecture</b></li>
+              <li><b>Sciences</b> primaire</li>
+              <li><b>Math</b> primaire et collège</li>
+              <li><b>Physique Chimie</b>collège</li>
+              <li><b>SVT</b> collège et lycée</li>
+              <li><b>Bien être animal</b> et <b>éthologie</b>.
+              </li>
+            </ul>
+          <div class="color-peche-foncee text-center mt-3">
+              <div>Pour réserver un créneau, rendez-vous dans la rubrique <span class="typo-link" 
+                routerLink="/reservation">Réservation</span> !</div>
+          </div>
         </div>
       </div>
     </div>
@@ -89,25 +105,32 @@
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div>intro</div>
-          <div>lien page pension</div>
-          <div>bla</div>
-          <div>bla</div>
-          <div>bla</div>
+          <div>Les animaux présents chez Séréni'chat proviennent de trois horizons :</div>
+          <ul class="text-left">
+            <li>Animaux <b>permanents</b>, adoptés par Séréni'chat (chats, lapines et axolotls)</li>
+            <li>Animaux confiés par des <b>associations</b> de protection animale, 
+              en attente de leur famille pour la vie</li>
+            <li>Et des chats en <b>pension temporaire</b> (lors des vacances 
+              de leurs propriétaires par exemple).</li>
+          </ul>
+          <div class="color-peche-foncee text-center mt-3">
+            Si vous souhaitez faire garder votre chat dans un endroit <b>spécialement 
+            conçu pour les animaux</b>, par une personne <b>qualifiée</b> (ACACED), et où il aura tout un tas 
+            de compagnie, rendez-vous dans la rubrique <b>Pension pour chats</b> ! 
+            (Cette rubrique étant en création, vous pouvez nous <b>contacter</b> directement : 
+            <span class="typo-link"
+            routerLink="/contact">Contact</span>)</div>
         </div>
       </div>
     </div>
+
     <div class="jumbo mb-3">
       <div class="jumbo-title">
-        Le <b>club TSA</b>
+        Le club <b>Jeunes Adultes Neuro-Atypiques</b>
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div>explication</div>
-          <div>lien page réservation ?</div>
-          <div>bla</div>
-          <div>bla</div>
-          <div>bla</div>
+          <div>-Rubrique en cours de création-</div>
         </div>
       </div>
     </div>
