--- a/src/app/formulaire/formulaire.component.html
+++ b/src/app/formulaire/formulaire.component.html
@@ -106,7 +106,7 @@
         <div class="row">
           <div class="col">
             <mat-form-field class="w-100">
-              <mat-label>Informations supplémentaires (ex : peur des animaux, hypo/hypersensibilité, conseils en cas de crise...)</mat-label>
+              <mat-label>Informations supplémentaires (ex : matière et niveau du cours, peur des animaux, hypo/hypersensibilité, conseils en cas de crise...)</mat-label>
               <textarea matInput [(ngModel)]="formulaireDto.commentaire" name="commentaire"></textarea>
             </mat-form-field>
           </div>
