--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -3,11 +3,12 @@
     <div>Ici, vous pouvez réserver un créneau de <b>médiation animale et sensorielle ou de cours particuliers</b>.</div>
     <div class="color-turquoise-foncee text-left mt-3">
       <div>Nos tarifs :</div>
-      <div>- (Médiation animale) Une place en séance d’une heure <b>classique</b> : 20 euros.</div>
-      <div>- (Médiation animale) Séance <b>individuelle</b> d'une heure : 30 euros.</div>
-      <div>- (Médiation animale) Une place en demi journée <b>classique</b> : 60 euros.</div>
-      <div>- (Médiation animale) Demi journée <b>individuelle</b> : 90 euros.</div>
-      <div>- (Cours particuliers) Cours <b>individuel</b> d'une heure en Lecture/Sciences primaire/Math primaire et collège/Physique-Chimie collège/SVT collège et Lycée : 25 euros.</div>
+      <div>- (Médiation animale et sensorielle) Une place en séance d’une heure <b>classique</b> : 20 euros.</div>
+      <div>- (Médiation animale et sensorielle) Séance <b>individuelle</b> d'une heure : 30 euros.</div>
+      <div>- (Médiation animale et sensorielle) Une place en demi journée <b>classique</b> : 60 euros.</div>
+      <div>- (Médiation animale et sensorielle) Demi journée <b>individuelle</b> : 90 euros.</div>
+      <div>- (Cours particuliers) Cours <b>individuel</b> d'une heure en Lecture, Sciences primaire, 
+        Math primaire et collège, Physique Chimie collège, SVT collège et lycée, Bien être animal et éthologie : 25 euros.</div>
     </div>
     <div class="color-peche-foncee text-center mt-5">
     </div>
