--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -1,6 +1,6 @@
 <div class="text-big">
   <div class="color-peche-foncee text-center mt-5">
-    <div>Ici, vous pouvez réserver un créneau de <b>médiation animale et sensorielle ou de cours particuliers</b>.</div>
+    <div>Ici, vous pouvez réserver un créneau de <b>médiation animale et sensorielle</b> ou un <b>cours particulier</b>.</div>
     <div class="color-turquoise-foncee text-left mt-3">
       <div>Nos tarifs :</div>
       <div>- (Médiation animale et sensorielle) Une place en séance d’une heure <b>classique</b> : 20 euros.</div>
