--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -31,8 +31,8 @@
           <div><b>Séréni'chat</b> est un lieu dédié à l'assistance aux <b>personnes handicapées</b> (et plus
             spécialement les enfants) par le <b>contact
               avec l'animal</b> et l'accès à une salle <b>multi-sensorielle.</b></div>
-          <div>Nous essayons aussi d'apporter un <b>soulagement</b> aux <b>parents ou aidants</b> : ils peuvent tout à
-            fait nous <b>confier</b> leur enfant
+          <div>Nous essayons aussi d'apporter un <b>soulagement</b> aux <b>parents ou aidants</b> : vous pouvez tout à
+            fait nous <b>confier</b> votre enfant
             sans rester pendant la séance, et profiter ainsi d'une <b>heure de libre</b> !
           </div>
           <div>La <b>médiation animale</b> (ou <b>zoothérapie</b>) et la stimulation <b>sensorielle</b> apportent un
