--- a/src/app/formulaire/formulaire.component.html
+++ b/src/app/formulaire/formulaire.component.html
@@ -12,7 +12,7 @@
           <mat-radio-button [value]="true">{{ getDemiJourneeLabel() }}</mat-radio-button>
           <mat-radio-button [value]="false">Médiation animale et sensorielle : séance de {{ getTime(seance.debut) }} - {{ getTime(seance.fin) }}
           </mat-radio-button>
-          <mat-radio-button [value]="false">Cours particuliers : de {{ getTime(seance.debut) }} à {{ getTime(seance.fin) }}
+          <mat-radio-button [value]="false">Cours particulier : de {{ getTime(seance.debut) }} à {{ getTime(seance.fin) }}
           </mat-radio-button>
         </mat-radio-group>
       </div>
