ambiance zen cours

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -81,7 +81,8 @@
           <div>Noémie, la créatrice de Séréni'chat, est enseignante de formation 
             avec plus de 5 ans d'expérience en collège et lycée. En cas de difficultés dans 
             certaines matières, de phobie scolaire, de difficultés de scolarisation, 
-            ou si vous désirez en savoir plus sur les animaux de compagnie, Séréni'chat est là pour vous !</div> 
+            ou si vous désirez en savoir plus sur les animaux de compagnie : Séréni'chat est là pour vous, 
+            dans un cadre zen qui ne rappelle pas du tout l'école !</div> 
             <div>Nous proposons des cours de :</div>
             <ul class="text-left">
               <li><b>Lecture</b></li>
