--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -52,18 +52,19 @@
             La médiation animale et sensorielle s'adresse aux :
           </div>
           <ul class="color-turquoise-foncee text-left">
-            <li>Enfants <b>neuro-atypiques</b> (TSA, TED)</li>
-            <li>Enfants souffrant d'<b>anxiété</b> ou de <b>troubles obsessionnels</b></li>
-            <li>Enfants porteurs de <b>trisomie</b></li>
-            <li>Enfants <b>malades chroniques</b></li>
-            <li><b>Particuliers</b> ou <b>organisations</b> : classes ULIS, HDJP, MDPH...</li>
+            <li>Enfants ou adultes <b>neuro-atypiques</b> (TSA, TED)</li>
+            <li>Enfants ou adultes souffrant d'<b>anxiété</b>, de <b>troubles obsessionnels compulsifs</b> ou de 
+              <b>phobie des animaux</b></li>
+            <li>Enfants ou adultes porteurs de <b>trisomie</b></li>
+            <li>Enfants ou adultes <b>malades chroniques</b></li>
+            <li><b>Particuliers</b> et <b>organisations</b> : classes ULIS, HDJP, MDPH...</li>
             <li><b>Parents</b> ou <b>aidants</b> à la recherche d'une activité leur apportant un 
               <b>moment de répit</b>
             </li>
           </ul>
           <div class="color-peche-foncee text-center mt-3">
             <div>Pour réserver un créneau, rendez-vous dans la rubrique <span class="typo-link" routerLink="/reservation">Réservation</span> !</div>
-            <div>Vous voulez réserver pour une personne non représentée ci-dessus (un adulte par exemple) ? <span
+            <div>Vous voulez réserver pour une personne non représentée ci-dessus ? <span
             class="typo-link"
             routerLink="/contact">Contactez-nous</span> afin de déterminer si c'est possible !</div>
           </div>
@@ -78,19 +79,19 @@
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div>Noémie, la créatrice de Séréni'chat, est enseignante de formation 
-            avec plus de 5 ans d'expérience en collège et lycée. En cas de difficultés dans 
-            certaines matières, de phobie scolaire, de difficultés de scolarisation, 
-            ou si vous désirez en savoir plus sur les animaux de compagnie : Séréni'chat est là pour vous, 
-            dans un cadre zen qui ne rappelle pas du tout l'école !</div> 
+          <div><b></b>Noémie, la créatrice de Séréni'chat, est <b>enseignante</b> de formation 
+            avec plus de 5 ans d'expérience en collège et lycée. En cas de <b>difficultés</b> dans 
+            certaines matières, de <b>phobie scolaire</b>, de <b>difficultés de scolarisation</b>, 
+            ou si vous désirez en savoir plus sur les <b>animaux de compagnie</b> : Séréni'chat est là pour vous, 
+            dans un cadre zen <b>qui ne rappelle pas du tout l'école</b> !</div> 
             <div>Nous proposons des cours de :</div>
             <ul class="text-left">
               <li><b>Lecture</b></li>
               <li><b>Sciences</b> primaire</li>
               <li><b>Math</b> primaire et collège</li>
-              <li><b>Physique Chimie</b>collège</li>
+              <li><b>Physique Chimie </b>collège</li>
               <li><b>SVT</b> collège et lycée</li>
-              <li><b>Bien être animal</b> et <b>éthologie</b>.
+              <li><b>Bien être animal</b>, <b>comment s'occuper d'animaux domestiques</b>.
               </li>
             </ul>
           <div class="color-peche-foncee text-center mt-3">
@@ -115,12 +116,12 @@
               de leurs propriétaires par exemple).</li>
           </ul>
           <div class="color-peche-foncee text-center mt-3">
-            Si vous souhaitez faire garder votre chat dans un endroit <b>spécialement 
-            conçu pour les animaux</b>, par une personne <b>qualifiée</b> (ACACED), et où il aura tout un tas 
-            de compagnie, rendez-vous dans la rubrique <b>Pension pour chats</b> ! 
-            (Cette rubrique étant en création, vous pouvez nous <b>contacter</b> directement : 
-            <span class="typo-link"
-            routerLink="/contact">Contact</span>)</div>
+            <div class="color-turquoise-foncee"> Si vous souhaitez faire garder votre chat dans un endroit <b>spécialement 
+              conçu pour les animaux</b>, par une personne <b>qualifiée</b> (ACACED), et où il aura tout un tas 
+              de compagnie, rendez-vous dans la rubrique <b>Pension pour chats</b> !</div>
+            (Cette rubrique étant en création, vous pouvez nous <span class="typo-link"
+            routerLink="/contact">contacter</span> directement 
+            pour que l'on vous transmette toutes les informations)</div>
         </div>
       </div>
     </div>
@@ -131,7 +132,7 @@
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div>-Rubrique en cours de création-</div>
+          <div>-Rubrique en cours de rédaction-</div>
         </div>
       </div>
     </div>
@@ -159,13 +160,12 @@
         <div class="color-turquoise-foncee text-left">
           <div class="color-peche-foncee"><b>Noémie</b>, fondatrice :</div>
           <div class="color-turquoise-foncee">
-            <div>Enseignante de biologie accueillant depuis des années des élèves de classe ULIS, j'ai décidé de
-              créer ma propre activité
-              mêlant deux pôles essentiels à mon projet de vie : l'assistance aux personnes différentes et la
-              protection des animaux.
+            <div><b>Enseignante</b> de biologie accueillant depuis des années des élèves de classe <b>ULIS</b>, 
+              j'ai décidé de créer ma propre activité mêlant deux pôles essentiels à mon projet de vie : 
+              l'<b>assistance aux personnes différentes</b> et la <b>protection des animaux</b>.
             </div>
-            <div>Je me forme en continu concernant ces deux aspects de l'activité, et possède le certificat de
-              capacité Animaux Domestiques ainsi qu'une formation aux Premiers Secours.
+            <div>Je me forme en continu concernant ces deux aspects de l'activité, et possède le <b>certificat de
+              capacité Animaux Domestiques</b> ainsi qu'une formation aux <b>Premiers Secours</b>.
             </div>
             <div class="color-peche-foncee text-center mt-3">
               Vous êtes entre de bonnes mains !
