--- a/src/app/nous-aider/nous-aider.component.html
+++ b/src/app/nous-aider/nous-aider.component.html
@@ -5,44 +5,57 @@
     </div>
   </div>
   <div class="color-peche-foncee text-center">
-    <div>Si vous voulez nous soutenir autrement, il y a 2 façons de le faire !</div>
+    <div>Si vous voulez nous soutenir autrement, il y a 3 façons de le faire !</div>
   </div>
 </div>
 <div class="row mt-4">
   <div class="col">
     <div class="jumbo">
       <div class="jumbo-title">
-        Faire un don <b>matériel</b>
+        1) Faire un don <b>matériel</b>
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div>Vous pouvez nous amener
+          <div>Vous pouvez nous amener...
           </div>
           <div class="text-left">
-            <div>- pour les chats : des croquettes pour chats stérilisés, de la litière végétale, des petites
+            <div>- pour les <b>chats</b> : des croquettes pour chats stérilisés, de la litière agglomérante, des petites
               friandises pour chat, des jouets
             </div>
-            <div>-pour les lapins : du foin, leurs fruits et légumes frais préférés (carotte, banane), des jouets à ronger
+            <div>-pour les <b>lapins</b> : du foin, leurs fruits et légumes frais préférés (carotte, banane), des jouets à ronger
             </div>
-            <div>- autre chose qui leur ferait plaisir !
+            <div>- autre chose qui leur ferait <b>plaisir</b> !
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="col text-center mt-5">
+  <div class="col text-center mt-5 mb-5">
       <img src="../../assets/images/main.jpg" alt="main logo" class="logo-main">
   </div>
-  <div class="col mt-5">
+  <div class="col">
     <div class="jumbo">
       <div class="jumbo-title">
-        Faire un don <b>financier</b>
+        2) Faire un don <b>financier</b>
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div>Vous pouvez participer à notre <a href="https://www.leetchi.com/c/aide-au-fonctionnement-serenichat" target="_blank">cagnotte en ligne</a></div>
+          <div>Vous pouvez <b>participer</b> à notre <a href="https://www.leetchi.com/c/aide-au-fonctionnement-serenichat" target="_blank">cagnotte en ligne</a></div>
         </div>
+      </div>
+    </div>
+    <div class="jumbo mt-3 mb-3">
+      <div class="jumbo-title">
+        3) <b>Parrainer</b> un animal
+      </div>
+      <div class="jumbo-body">
+        <div class="color-turquoise-foncee text-center">
+        Si vous le souhaitez, vous pouvez <b>parrainer</b> un animal de Séréni'chat : 
+        soit l'un de nos <b>permanents</b>, soit l'un de nos <b>accueils</b> (en attendant qu'il 
+        trouve une famille pour la vie) !
+        <div>Pour <b>3 euros</b> par mois, vous recevrez ainsi des <b>photos</b> et <b>vidéos</b> de votre 
+          petit protégé.</div></div>
       </div>
     </div>
   </div>
