--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -8,7 +8,8 @@
       <div>- (Médiation animale et sensorielle) Une place en demi journée <b>classique</b> : 60 euros.</div>
       <div>- (Médiation animale et sensorielle) Demi journée <b>individuelle</b> : 90 euros.</div>
       <div>- (Cours particuliers) Cours <b>individuel</b> d'une heure en Lecture, Sciences primaire, 
-        Math primaire et collège, Physique Chimie collège, SVT collège et lycée, Bien être animal et éthologie : 25 euros.</div>
+        Math primaire et collège, Physique Chimie collège, SVT collège et lycée et Bien être animal, 
+        comment s'occuper d'animaux domestiques : 25 euros.</div>
     </div>
     <div class="color-peche-foncee text-center mt-5">
     </div>
